--- a/src/sample/resources/login.fxml
+++ b/src/sample/resources/login.fxml
@@ -9,11 +9,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="700.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane prefHeight="591.0" prefWidth="700.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <AnchorPane layoutX="30.0" layoutY="35.0" prefHeight="539.0" prefWidth="583.0" style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="47.0" AnchorPane.leftAnchor="23.0" AnchorPane.rightAnchor="23.0" AnchorPane.topAnchor="47.0">
+      <AnchorPane layoutX="-1.0" layoutY="1.0" prefHeight="591.0" prefWidth="700.0" style="-fx-background-color: g;" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="1.0">
          <children>
-            <AnchorPane fx:id="loginPane" layoutX="252.0" layoutY="32.0" maxWidth="359.0" prefHeight="440.0" prefWidth="359.0" style="-fx-background-color: white; -fx-background-radius: 1em;" AnchorPane.bottomAnchor="34.0" AnchorPane.leftAnchor="278.0" AnchorPane.rightAnchor="17.0" AnchorPane.topAnchor="32.0">
+            <AnchorPane fx:id="loginPane" layoutX="252.0" layoutY="13.0" maxWidth="405.0" prefHeight="567.0" prefWidth="405.0" style="-fx-background-color: white; -fx-background-radius: 1em;" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="278.0" AnchorPane.rightAnchor="17.0" AnchorPane.topAnchor="13.0">
                <children>
                   <Label layoutX="88.0" layoutY="50.0" text="Sign In" AnchorPane.leftAnchor="88.0" AnchorPane.rightAnchor="220.0" AnchorPane.topAnchor="50.0">
                      <font>
@@ -30,9 +30,17 @@
                         <Insets left="10.0" right="10.0" />
                      </padding>
                   </JFXButton>
+                  <JFXButton fx:id="btnSignUpAccount" buttonType="RAISED" layoutX="109.0" layoutY="335.0" maxWidth="207.0" onMouseClicked="#handleViewChange" prefHeight="42.0" prefWidth="207.0" ripplerFill="WHITE" style="-fx-background-radius: 1em; -fx-background-color: #D5CBEB;" text="Don't have account? Sign up" AnchorPane.leftAnchor="109.0" AnchorPane.rightAnchor="43.0">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                     <padding>
+                        <Insets left="10.0" right="10.0" />
+                     </padding>
+                  </JFXButton>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="18.0" layoutY="95.0" prefHeight="376.0" prefWidth="318.0" style="-fx-background-color: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12); background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12); -fx-background-radius: 1em;" AnchorPane.bottomAnchor="18.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="19.0">
+            <AnchorPane layoutY="1.0" prefHeight="489.0" prefWidth="318.0" style="-fx-background-color: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12); background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12); -fx-background-radius: 1em;" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="1.0">
                <children>
                   <VBox alignment="CENTER_LEFT" layoutX="80.0" layoutY="128.0" prefHeight="232.0" prefWidth="226.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
@@ -53,6 +61,16 @@
                         </Label>
                      </children>
                   </VBox>
+                  <JFXButton fx:id="btnClose" layoutX="15.0" layoutY="8.0" onMouseClicked="#buttonHandleEvent" prefHeight="12.0" prefWidth="12.0" style="-fx-background-color: red; -fx-background-radius: 60;" textOverrun="CLIP" AnchorPane.bottomAnchor="575.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="291.0" AnchorPane.topAnchor="8.0">
+                     <font>
+                        <Font size="6.0" />
+                     </font>
+                  </JFXButton>
+                  <JFXButton fx:id="btnMinimize" layoutX="39.0" layoutY="8.0" prefHeight="12.0" prefWidth="12.0" style="-fx-background-color: blue; -fx-background-radius: 60;" textOverrun="CLIP" AnchorPane.bottomAnchor="575.0" AnchorPane.leftAnchor="39.0" AnchorPane.rightAnchor="267.0" AnchorPane.topAnchor="8.0">
+                     <font>
+                        <Font size="6.0" />
+                     </font>
+                  </JFXButton>
                </children>
             </AnchorPane>
          </children>
