--- a/src/sample/resources/mainActivity/sendMoney.fxml
+++ b/src/sample/resources/mainActivity/sendMoney.fxml
@@ -1,14 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
+<AnchorPane prefHeight="558.0" prefWidth="502.0" style="-fx-background-color: white; -fx-background-radius: 0 11 11 0;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.resources.mainActivity.sendMoneyController">
+    <children>
+        <VBox layoutX="64.0" layoutY="89.0" prefHeight="104.0" prefWidth="385.0">
+            <children>
+                <JFXTextField fx:id="IDInput" focusColor="#4ffbca" labelFloat="true" prefHeight="27.0" prefWidth="353.0" promptText="Card ID">
+                    <VBox.margin>
+                        <Insets bottom="30.0" />
+                    </VBox.margin>
+                </JFXTextField>
+                <JFXTextField fx:id="fundInput" focusColor="#4ffbca" labelFloat="true" prefHeight="27.0" prefWidth="353.0" promptText="Fund">
+                    <VBox.margin>
+                        <Insets bottom="30.0" />
+                    </VBox.margin>
+                </JFXTextField>
+            </children>
+        </VBox>
+        <Label layoutX="64.0" layoutY="42.0" text="Send Money">
+            <font>
+                <Font name="System Bold" size="18.0" />
+            </font>
+        </Label>
+        <JFXButton fx:id="sendMoneyButton" layoutX="187.0" layoutY="203.0" onMouseClicked="#sendMoney" prefHeight="42.0" prefWidth="139.0" style="-fx-background-radius: 1em; -fx-background-color: orange;" text="Sennd Money" />
+    </children>
 </AnchorPane>
